# kortex_test

./: .env.example  Makefile  Readme.md  pyproject.toml
app/applications/account/: admin.py  tasks.py
app/applications/account/migrations/: 0001_initial.py
app/applications/orders/: tasks.py
app/applications/singer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/applications/singer/migrations/: 0001_initial.py
app/applications/song/: admin.py  models.py  serializers.py  urls.py  views.py
app/applications/song/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
docker/: .env.example  .env.prod.db  Dockerfile  Dockerfile.migration  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
nginx/: nginx.conf
